--- a/module-services/CMakeLists.txt
+++ b/module-services/CMakeLists.txt
@@ -22,6 +22,7 @@ add_subdirectory( service-db )
 add_subdirectory( service-cellular )
 add_subdirectory( service-audio )
 add_subdirectory( service-bluetooth )
+add_subdirectory( service-presage )
 
 
 target_link_libraries(${PROJECT_NAME} PUBLIC module-bsp module-os module-sys module-utils module-gui module-apps module-db module-cellular module-audio  ${TARGET_LIBRARIES} )
