--- a/module-db/CMakeLists.txt
+++ b/module-db/CMakeLists.txt
@@ -30,6 +30,7 @@ set(SOURCES
         ${CMAKE_CURRENT_SOURCE_DIR}/Databases/SettingsDB.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/Databases/AlarmsDB.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/Databases/NotesDB.cpp
+         ${CMAKE_CURRENT_SOURCE_DIR}/Databases/PresageDB.cpp
 
         ${CMAKE_CURRENT_SOURCE_DIR}/Tables/Table.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/Tables/SMSTable.cpp
@@ -42,6 +43,7 @@ set(SOURCES
         ${CMAKE_CURRENT_SOURCE_DIR}/Tables/SettingsTable.cpp
 		${CMAKE_CURRENT_SOURCE_DIR}/Tables/AlarmsTable.cpp
 		${CMAKE_CURRENT_SOURCE_DIR}/Tables/NotesTable.cpp
+		${CMAKE_CURRENT_SOURCE_DIR}/Tables/PresageTable.cpp
 
         ${CMAKE_CURRENT_SOURCE_DIR}/Interface/Record.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/Interface/SMSRecord.cpp
@@ -50,6 +52,7 @@ set(SOURCES
         ${CMAKE_CURRENT_SOURCE_DIR}/Interface/SettingsRecord.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/Interface/AlarmsRecord.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/Interface/NotesRecord.cpp
+		${CMAKE_CURRENT_SOURCE_DIR}/Interface/PresageRecord.cpp
 
         )
 
