--- a/module-apps/CMakeLists.txt
+++ b/module-apps/CMakeLists.txt
@@ -41,6 +41,7 @@ add_subdirectory( application-phonebook )
 add_subdirectory( application-messages )
 add_subdirectory( application-calllog )
 add_subdirectory( application-special-input )
+add_subdirectory( application-calculator )
 
 include_directories( ../module-sys )
 include_directories( ../module-utils )
