--- a/module-apps/application-calculator/CMakeLists.txt
+++ b/module-apps/application-calculator/CMakeLists.txt
@@ -1,4 +1,3 @@
-
 include_directories( ${CMAKE_PROJECT_NAME}
 
 	PUBLIC
@@ -18,5 +17,6 @@ target_sources( ${PROJECT_NAME}
 		"${CMAKE_CURRENT_LIST_DIR}/windows/CalculatorMainWindow.cpp"
 	PUBLIC
 		"${CMAKE_CURRENT_LIST_DIR}/ApplicationCalculator.hpp"
+		"${CMAKE_CURRENT_LIST_DIR}/windows/CalculatorMainWindow.hpp"
 )
 
