--- a/module-apps/application-calculator/CMakeLists.txt
+++ b/module-apps/application-calculator/CMakeLists.txt
@@ -2,13 +2,17 @@ include_directories( ${CMAKE_PROJECT_NAME}
 
 	PUBLIC
 		"${CMAKE_CURRENT_LIST_DIR}"
-)
+		"${CMAKE_CURRENT_LIST_DIR}/data"
+
+		)
 
 include_directories( ${PROJECT_NAME}
 
 	PUBLIC
 		"${CMAKE_CURRENT_LIST_DIR}"
-)
+		"${CMAKE_CURRENT_LIST_DIR}/data"
+
+		)
 
 target_sources( ${PROJECT_NAME}
 
