[EGD-3307] Add calendar db files

--- a/module-db/CMakeLists.txt
+++ b/module-db/CMakeLists.txt
@@ -24,6 +24,7 @@ set(SOURCES
         Databases/CalllogDB.cpp
         Databases/CountryCodesDB.cpp
         Databases/NotificationsDB.cpp
+        Databases/EventsDB.cpp
 
         Tables/Table.cpp
         Tables/SMSTable.cpp
@@ -41,6 +42,7 @@ set(SOURCES
         Tables/CountryCodesTable.cpp
         Tables/SMSTemplateTable.cpp
         Tables/NotificationsTable.cpp
+        Tables/EventsTable.cpp
 
         Interface/Record.cpp
         Interface/SMSRecord.cpp
@@ -52,6 +54,7 @@ set(SOURCES
         Interface/CalllogRecord.cpp
         Interface/SMSTemplateRecord.cpp
         Interface/NotificationsRecord.cpp
+        Interface/EventsRecord.cpp
 
         queries/RecordQuery.cpp
         queries/sms/QuerySMSSearch.cpp
@@ -64,7 +67,13 @@ set(SOURCES
         queries/notifications/QueryNotificationsClear.cpp
         queries/notifications/QueryNotificationsGetAll.cpp
         queries/phonebook/QueryContactGet.cpp
-)
+        queries/calendar/QueryEventsUpdate.cpp
+        queries/calendar/QueryEventsRemove.cpp
+        queries/calendar/QueryEventsGet.cpp
+        queries/calendar/QueryEventsGetAll.cpp
+        queries/calendar/QueryEventsAdd.cpp
+
+        )
 
 if(NOT ${PROJECT_TARGET} STREQUAL "TARGET_Linux")
     include(targets/Target_Cross.cmake)
