git commit -m "SMS notification analysis and example of use with keyboard trigger"

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,4 +5,7 @@
         "COLOR_OUTPUT": "OFF"
     },
     "testMate.cpp.test.executables": "build-linux-Debug/{googletest,catch2}-*",
+    "files.associations": {
+        "system_error": "cpp"
+    },
 }
