--- a/module-apps/application-calendar/CMakeLists.txt
+++ b/module-apps/application-calendar/CMakeLists.txt
@@ -15,6 +15,7 @@ target_sources( ${PROJECT_NAME}
 		"${CMAKE_CURRENT_LIST_DIR}/windows/EventDetailWindow.cpp"
 		"${CMAKE_CURRENT_LIST_DIR}/models/MonthModel.cpp"
 		"${CMAKE_CURRENT_LIST_DIR}/models/CustomRepeatModel.cpp"
+		"${CMAKE_CURRENT_LIST_DIR}/models/NewEditEventModel.cpp"
 		"${CMAKE_CURRENT_LIST_DIR}/widgets/DayEventsItem.cpp"
 		"${CMAKE_CURRENT_LIST_DIR}/widgets/AllEventsItem.cpp"
 		"${CMAKE_CURRENT_LIST_DIR}/widgets/CalendarListView.cpp"
@@ -23,6 +24,7 @@ target_sources( ${PROJECT_NAME}
 		"${CMAKE_CURRENT_LIST_DIR}/widgets/CheckBoxItem.cpp"
 		"${CMAKE_CURRENT_LIST_DIR}/widgets/EventTimeItem.cpp"
 		"${CMAKE_CURRENT_LIST_DIR}/widgets/SeveralOptionsItem.cpp"
+		"${CMAKE_CURRENT_LIST_DIR}/widgets/TextWithLabelItem.cpp"
 	PUBLIC
 		"${CMAKE_CURRENT_LIST_DIR}/ApplicationCalendar.hpp"
 		"${CMAKE_CURRENT_LIST_DIR}/models/DayEventsModel.hpp"
