--- a/module-apps/application-calendar/CMakeLists.txt
+++ b/module-apps/application-calendar/CMakeLists.txt
@@ -27,11 +27,15 @@ target_sources( ${PROJECT_NAME}
 		"${CMAKE_CURRENT_LIST_DIR}/widgets/TextWithLabelItem.cpp"
 		"${CMAKE_CURRENT_LIST_DIR}/widgets/CheckBoxWithLabelAndModel.cpp"
 		"${CMAKE_CURRENT_LIST_DIR}/widgets/AddRepeatedEvents.cpp"
+		"${CMAKE_CURRENT_LIST_DIR}/widgets/DayLabel.cpp"
+		"${CMAKE_CURRENT_LIST_DIR}/widgets/MonthBox.cpp"
 	PUBLIC
 		"${CMAKE_CURRENT_LIST_DIR}/ApplicationCalendar.hpp"
 		"${CMAKE_CURRENT_LIST_DIR}/models/MonthModel.hpp"
 		"${CMAKE_CURRENT_LIST_DIR}/widgets/CalendarListItem.hpp"
 		"${CMAKE_CURRENT_LIST_DIR}/widgets/AddRepeatedEvents.hpp"
+		"${CMAKE_CURRENT_LIST_DIR}/widgets/DayLabel.cpp"
+		"${CMAKE_CURRENT_LIST_DIR}/widgets/MonthBox.cpp"
 		"${CMAKE_CURRENT_LIST_DIR}/data/OptionParser.hpp"
 		"${CMAKE_CURRENT_LIST_DIR}/data/CalendarData.hpp"
 		"${CMAKE_CURRENT_LIST_DIR}/data/TimeDisplayParser.hpp"
