--- a/module-apps/application-calendar/CMakeLists.txt
+++ b/module-apps/application-calendar/CMakeLists.txt
@@ -34,6 +34,7 @@ target_sources( ${PROJECT_NAME}
 		"${CMAKE_CURRENT_LIST_DIR}/models/MonthModel.hpp"
 		"${CMAKE_CURRENT_LIST_DIR}/widgets/CalendarListItem.hpp"
 		"${CMAKE_CURRENT_LIST_DIR}/widgets/AddRepeatedEvents.hpp"
+		"${CMAKE_CURRENT_LIST_DIR}/widgets/CalendarStyle.hpp"
 		"${CMAKE_CURRENT_LIST_DIR}/data/OptionParser.hpp"
 		"${CMAKE_CURRENT_LIST_DIR}/data/CalendarData.hpp"
 		"${CMAKE_CURRENT_LIST_DIR}/data/TimeDisplayParser.hpp"
