[EGD-2870] Message drafts feature implemented. - Save unsent messages as drafts on thread view window close. - Queries for SMS add and update introduced. - Fix for windows IDs all being zeroes across the GUI.

--- a/module-db/CMakeLists.txt
+++ b/module-db/CMakeLists.txt
@@ -69,7 +69,9 @@ set(SOURCES
         queries/sms/QuerySMSGetByContactID.cpp
         queries/sms/QuerySMSGetByThreadID.cpp
         queries/sms/QuerySMSGetByText.cpp
+        queries/sms/QuerySMSAdd.cpp
         queries/sms/QuerySMSRemove.cpp
+        queries/sms/QuerySMSUpdate.cpp
         queries/sms/QuerySMSTemplateAdd.cpp
         queries/sms/QuerySMSTemplateGetByID.cpp
         queries/sms/QuerySMSTemplateGet.cpp
