[EGD-3512] Create ICS Parser
-Create application desktop endpoints for ics
-Add methods to icallib
-Modify Calendar Database Interface
-Create ParserICS class
-Create calendar events endpoints test

--- a/.gitmodules
+++ b/.gitmodules
@@ -55,4 +55,4 @@
 	url = git@github.com:Neargye/magic_enum.git
 [submodule "module-utils/icalendarlib"]
 	path = module-utils/icalendarlib
-	url = git@github.com:jgonera/icalendarlib.git
+	url = git@github.com:mudita/icalendarlib.git
