[EGD-4075] Use FAT fs in the emulator
Add script for genrate base phone image

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -204,6 +204,17 @@ set_source_files_properties(source/main.cpp PROPERTIES COMPILE_DEFINITIONS "${EN
 target_link_options(${PROJECT_NAME} PUBLIC ${TARGET_LINK_OPTIONS})
 
 if (${PROJECT_TARGET} STREQUAL "TARGET_Linux")
+
+	set(FAT_IMAGE ${CMAKE_PROJECT_NAME}.img)
+
+	add_custom_target(
+		${FAT_IMAGE}-target ALL
+		COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/generate_fatfs_image.sh ${FAT_IMAGE} ${CMAKE_BINARY_DIR}
+		WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+        DEPENDS assets
+		COMMENT "Generate ${FAT_IMAGE}"
+	)
+
     install(TARGETS ${CMAKE_PROJECT_NAME} DESTINATION "./")
 endif()
 
