[EGD-4075] Improve image generation
Improve image generation script on the linux platform

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -206,13 +206,16 @@ target_link_options(${PROJECT_NAME} PUBLIC ${TARGET_LINK_OPTIONS})
 if (${PROJECT_TARGET} STREQUAL "TARGET_Linux")
 
 	set(FAT_IMAGE ${CMAKE_PROJECT_NAME}.img)
-
-	add_custom_target(
-		${FAT_IMAGE}-target ALL
+	add_custom_command(
+		OUTPUT ${FAT_IMAGE}
+        DEPENDS assets
 		COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/generate_fatfs_image.sh ${FAT_IMAGE} ${CMAKE_BINARY_DIR}
 		WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
-        DEPENDS assets
 		COMMENT "Generate ${FAT_IMAGE}"
+	)
+	add_custom_target(
+		${FAT_IMAGE}-target ALL
+		DEPENDS ${FAT_IMAGE}
 	)
 
     install(TARGETS ${CMAKE_PROJECT_NAME} DESTINATION "./")
