[EGD-4318] enable service desktop and USB communication CDC for serial port (communication with Mudita Center) MTP for file transfer

--- a/module-services/service-desktop/endpoints/CMakeLists.txt
+++ b/module-services/service-desktop/endpoints/CMakeLists.txt
@@ -34,6 +34,7 @@ target_sources(${PROJECT_NAME}
 		"restore/RestoreEndpoint.cpp"
 		"update/UpdateEndpoint.cpp"
 		"update/UpdateMuditaOS.cpp"
+		"filesystem/FilesystemEndpoint.cpp"
 		"developerMode/DeveloperModeEndpoint.cpp"
 		"developerMode/DeveloperModeHelper.cpp"
 
