--- a/module-db/CMakeLists.txt
+++ b/module-db/CMakeLists.txt
@@ -121,6 +121,7 @@ set(SOURCES
         queries/alarms/QueryAlarmsGet.cpp
         queries/alarms/QueryAlarmsGetLimited.cpp
         queries/alarms/QueryAlarmsTurnOffAll.cpp
+        queries/alarms/QueryAlarmsSelectFirstUpcoming.cpp
 )
 
 if(NOT ${PROJECT_TARGET} STREQUAL "TARGET_Linux")
