[EGD-4828] Add GUI tests for DOM flow
 * `DepthFirstItemTree` tests - basic traverse functionalities
 * `GuiVisitor` tests - basic double dispatch calls
 * DOM serializer tests - basic serialization functionalities

--- a/module-gui/test/test-google/CMakeLists.txt
+++ b/module-gui/test/test-google/CMakeLists.txt
@@ -1,10 +1,14 @@
 project(googletest-gui)
 
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
+include_directories(${gmock_SOURCE_DIR}/include ${gmock_SOURCE_DIR})
 
 add_executable(${PROJECT_NAME} EXCLUDE_FROM_ALL
         test-gui-listview.cpp
         test-gui-boxlayout.cpp
+        test-gui-depthfirst-itemtree.cpp
+        test-gui-visitor-call.cpp
+        test-gui-dom-dump.cpp
         ../mock/TestListViewProvider.cpp
         )
 
@@ -20,6 +24,7 @@ target_link_directories(${PROJECT_NAME} PUBLIC "${PROJECT_LIB_DIRECTORY}")
 target_link_libraries(${PROJECT_NAME} PUBLIC module-utils module-gui)
 
 target_link_libraries(${PROJECT_NAME} PUBLIC gtest gtest_main)
+target_link_libraries(${PROJECT_NAME} PUBLIC gmock gmock_main)
 
 add_test(NAME ${PROJECT_NAME}
         COMMAND ${PROJECT_NAME}
