[EGD-4763] Fix Unit Tests
First attempt, move vfs to be init in tests

--- a/module-gui/test/test-catch/CMakeLists.txt
+++ b/module-gui/test/test-catch/CMakeLists.txt
@@ -1,4 +1,4 @@
-# gui tests
+﻿# gui tests
 add_catch2_executable(
         NAME
                 gui
@@ -13,6 +13,8 @@ add_catch2_executable(
                 ..
         LIBS
                 module-gui
+                iosyscalls
         DEPS
                 assets
+                PurePhone.img-target
 )
