--- a/module-services/service-desktop/tests/CMakeLists.txt
+++ b/module-services/service-desktop/tests/CMakeLists.txt
@@ -11,4 +11,7 @@ add_catch2_executable(
         service-desktop
         module-utils
         module-apps
+        iosyscalls
+    DEPS
+        PurePhone.img-target
 )
