--- a/module-services/service-evtmgr/CMakeLists.txt
+++ b/module-services/service-evtmgr/CMakeLists.txt
@@ -9,6 +9,7 @@ set(SOURCES
         messages/Message.cpp
         screen-light-control/ScreenLightControl.cpp
         screen-light-control/ControlFunctions.cpp
+        battery-level-check/BatteryLevelCheck.cpp
 )
 
 add_library(${PROJECT_NAME} STATIC ${SOURCES})
