[EGD-5026] Extract eink screen functionalities from ServiceEink to a seperate class.

--- a/module-services/service-eink/CMakeLists.txt
+++ b/module-services/service-eink/CMakeLists.txt
@@ -14,6 +14,7 @@ message( "EINK BOARD PATH: ${CMAKE_CURRENT_LIST_DIR}/${EINK_BOARD_PATH}" )
 
 set(SOURCES
     ServiceEink.cpp
+    EinkScreen.cpp
     messages/ImageMessage.cpp
 )
 
