[EGD-4918] Change network scan for operators
Change old implementation of network scan. Now in class
which have rest of network settings as NetworkSettings.
Change method from old message style to connect/API.

--- a/module-cellular/test/CMakeLists.txt
+++ b/module-cellular/test/CMakeLists.txt
@@ -9,3 +9,13 @@ add_catch2_executable(
     LIBS
         module-cellular 
 )
+
+add_catch2_executable(
+        NAME
+        cellular-response
+        SRCS
+        unittest_response.cpp
+        LIBS
+        module-cellular
+)
+
