--- a/module-services/service-gui/CMakeLists.txt
+++ b/module-services/service-gui/CMakeLists.txt
@@ -4,9 +4,9 @@ message( "${PROJECT_NAME}  ${CMAKE_CURRENT_LIST_DIR}" )
 set(SOURCES
     "${CMAKE_CURRENT_LIST_DIR}/ServiceGUI.cpp"
     "${CMAKE_CURRENT_LIST_DIR}/WorkerGUI.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/ContextPool.cpp"
     "${CMAKE_CURRENT_LIST_DIR}/messages/DrawMessage.cpp"
 )
-
 
 add_library(${PROJECT_NAME} STATIC ${SOURCES})
 
@@ -14,7 +14,7 @@ target_link_libraries(${PROJECT_NAME}
     service-eink
     module-gui
     module-apps
-    )
+)
 
 target_include_directories(${PROJECT_NAME}
     PUBLIC
@@ -22,3 +22,6 @@ target_include_directories(${PROJECT_NAME}
         "${CMAKE_CURRENT_LIST_DIR}/messages"
 )
 
+if (${ENABLE_TESTS})
+    add_subdirectory(tests)
+endif()
